     with the rest of the modules.
  -- Issue 28 - Allow a cons as a valid return type of Iterator.next;
     handle that specially in Mapper.next.
  -- Issue 29 - The InitVCS target has been deprecated.  The VCS() function
     is called just before the package finishes being impored.
  -- Issue 30 - pyerector.version.Version is now exported from the package;
     it is callable with release number strings to compare with the the
     current release number.  If greater than the current release,
     terminate with an error message.
  New task
  -- Touch which is similar to the touch(1) command, creating files if
     they do not exist.
  New type
  -- FileVariable allows some deferred resolution; file is loaded when
     accessed, not when created.
  Other fixes/enhancements:
  -- The Exclusions object now accepts three values: True, False and None;
     False will still include VCS().directory, and None will not include
     any extra values.
  -- Change vcs modules to a plugin type setup, using same registration
     as being used by Initer; plugins loaded automatically when
     pyerector.vcs.VCS is called.
  -- Get the proper information back from Mercurial; previously only the
     tip was retrieve.
  -- Allow for mappers in Tokenize.
  -- Typo in Symlinki task.
  -- Add *.user and *.date variables from VCS.current_info.
  -- Fix the template string for git-log; add an assertion.
  -- Tokenize now allows for multiple Iterators/Mappers to be passed.
  -- Various fixes to Iterators and Mappers; add uptodates entries in
     pyerect.
  -- Do not use assertions for type checking.
  -- Initer.asserttype returns TypeError now.
  -- Blank values for version strings.
  -- Get a closer timestamp for svn.date comparison in unittests.
  -- Allow an Iterator to be passed to Iterator.adjust.
  -- Use th proper version variables.
  -- Remove unused u() function.
  -- Fix unit tests after making Base.args into a tuple.
